Agrego arbol de directorios y elimino bibliografia sin usar

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,70 +1,3 @@
-@inproceedings{10.1007/978-3-030-03427-6_27,
-  abstract  = {Blockchains allow the specification of contracts in the form of programs that guarantee their fulfilment. Nevertheless, errors in those programs can cause important, and often irretrievable, monetary loss. General-purpose languages provide a platform on which contracts can be built, but by their very generality they have the potential to exhibit behaviours of an unpredictable kind, and are also not easy to read or comprehend for general users.},
-  address   = {Cham},
-  author    = {Lamela Seijas, Pablo
-               and Thompson, Simon},
-  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation. Industrial Practice},
-  editor    = {Margaria, Tiziana
-               and Steffen, Bernhard},
-  isbn      = {978-3-030-03427-6},
-  pages     = {356--375},
-  publisher = {Springer International Publishing},
-  title     = {Marlowe: Financial Contracts on Blockchain},
-  year      = {2018}
-}
-@inproceedings{10.1007/978-3-030-61467-6_11,
-  abstract  = {SMT solvers can verify properties automatically and efficiently, and they offer increasing flexibility on the ways those properties can be described. But it is hard to predict how those ways of describing the properties affect the computational cost of verifying them.},
-  address   = {Cham},
-  author    = {Lamela Seijas, Pablo
-               and Smith, David
-               and Thompson, Simon},
-  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation: Applications},
-  editor    = {Margaria, Tiziana
-               and Steffen, Bernhard},
-  isbn      = {978-3-030-61467-6},
-  pages     = {161--177},
-  publisher = {Springer International Publishing},
-  title     = {Efficient Static Analysis of Marlowe Contracts},
-  year      = {2020}
-}
-@article{10.1145/3464421,
-  abstract   = {A smart contract is a computer program that allows users to automate their actions
-                on the blockchain platform. Given the significance of smart contracts in supporting
-                important activities across industry sectors including supply chain, finance, legal,
-                and medical services, there is a strong demand for verification and validation techniques.
-                Yet, the vast majority of smart contracts lack any kind of formal specification, which
-                is essential for establishing their correctness. In this survey, we investigate formal
-                models and specifications of smart contracts presented in the literature and present
-                a systematic overview to understand the common trends. We also discuss the current
-                approaches used in verifying such property specifications and identify gaps with the
-                hope to recognize promising directions for future work.},
-  address    = {New York, NY, USA},
-  articleno  = {148},
-  author     = {Tolmach, Palina and Li, Yi and Lin, Shang-Wei and Liu, Yang and Li, Zengxiang},
-  doi        = {10.1145/3464421},
-  issn       = {0360-0300},
-  issue_date = {July 2021},
-  journal    = {ACM Comput. Surv.},
-  keywords   = {formal specification, Smart contract, properties, formal verification},
-  month      = jul,
-  number     = {7},
-  numpages   = {38},
-  publisher  = {Association for Computing Machinery},
-  title      = {A Survey of Smart Contract Formal Specification and Verification},
-  url        = {https://doi.org/10.1145/3464421},
-  volume     = {54},
-  year       = {2021}
-}
-@inproceedings{9152791,
-  author    = {Permenev, Anton and Dimitrov, Dimitar and Tsankov, Petar and Drachsler-Cohen, Dana and Vechev, Martin},
-  booktitle = {2020 IEEE Symposium on Security and Privacy (SP)},
-  doi       = {10.1109/SP40000.2020.00024},
-  number    = {},
-  pages     = {1661-1677},
-  title     = {VerX: Safety Verification of Smart Contracts},
-  volume    = {},
-  year      = {2020}
-}
 @misc{ACTUS_Dictionary,
   author       = {ACTUS},
   howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary.json}},
@@ -95,7 +28,6 @@
   title        = {ACTUS Dictionary Terms},
   year         = {2019}
 }
-
 @misc{ACTUS_Taxonomy,
   author       = {ACTUS},
   howpublished = {\url{https://www.actusfrf.org/taxonomy}},
@@ -134,20 +66,19 @@
   url         = {https://hal.inria.fr/hal-01400469},
   year        = {2016}
 }
-
 @misc{cardano_docs,
   author       = {IOHK},
   howpublished = {\url{https://docs.cardano.org/}},
   title        = {Documentation for the Cardano ecosystem},
   year         = {2015}
 }
+
 @misc{cardano_utxo_ledger,
   author = {Corduan, Jared and Vinogradova, Polina and Gudemann, Matthias},
   title  = {A Formal Specification of the Cardano Ledger},
   url    = {http://cardano-universe.com/wp-content/uploads/2019/02/ledger-spec.pdf},
   year   = {2019}
 }
-
 @misc{cardano_website,
   author       = {Cardano},
   howpublished = {\url{https://cardano.org/}},
@@ -254,6 +185,14 @@
   note         = {Online; accessed 26 May 2022},
   title        = {Marlowe Cardano Repository},
   year         = {2016}
+}
+
+@misc{marlowe-language-repo,
+  author       = {IOHK},
+  howpublished = {\url{https://github.com/input-output-hk/marlowe-cardano/tree/main/marlowe-actus/src/}},
+  month        = Jul,
+  title        = {Marlowe-actus Github repository},
+  year         = {2020}
 }
 
 @book{ML_programming_language,
