Elimino directorio de actus comentado

--- a/main.tex
+++ b/main.tex
@@ -1147,33 +1147,8 @@ Cabe destacar que durante esta tarea, tuve la colaboración de Yves Hauser\footn
 
 \subsection{Descripción de la estructura del proyecto}
 
-%└── Language
-   %└── Marlowe
-      %└── ACTUS
-         %├── Domain
-         %│  ├── BusinessEvents.hs
-         %│  ├── ContractState.hs
-         %│  ├── ContractTerms.hs
-         %│  ├── Ops.hs
-         %│  └── Schedule.hs
-         %├── Generator
-         %│  ├── Analysis.hs
-         %│  ├── Generator.hs
-         %│  ├── GeneratorFs.hs
-         %│  ├── GeneratorStatic.hs
-         %│  └── MarloweCompat.hs
-         %├── Model
-         %│  ├── Applicability.hs
-         %│  ├── ContractSchedule.hs
-         %│  ├── Payoff.hs
-         %│  ├── StateInitialization.hs
-         %│  └── StateTransition.hs
-         %└── Utility
-            %├── ANN
-            %│  └── Annuity.hs
-            %├── DateShift.hs
-            %├── ScheduleGenerator.hs
-            %└── YearFraction.hs
+En la siguiente subsección, describiremos brevemente algunos de las entidades relevantes para la implementación de un contrato. Para eso, es importante conocer la esctructura de archivos del mismo, junto con la responsibilidad de algunos de ellos.
+
 \begin{figure}[H]
 \begin{tikzpicture}%
 	\draw[color=black!60!white]
