--- a/main.tex
+++ b/main.tex
@@ -1145,6 +1145,7 @@ En esta sección, veremos como se desarrolló la escritura de tres contratos ACT
 
 Cabe destacar que durante esta tarea, tuve la colaboración de Yves Hauser\footnote{\href{https://iohk.io/en/team/yves-hauser}{https://iohk.io/en/team/yves-hauser}}, con quien conversamos sobre decisiones de diseño e implementación de los contratos correspondientes. Yves fue el responsable de integrar mis cambios a la rama \textit{master} del repositorio de \texttt{marlowe-cardano} \cite{marlowe-cardano-github}. %chktex 2
 
+\newpage
 \subsection{Descripción de la estructura del proyecto}
 
 En la siguiente subsección, describiremos brevemente algunos de las entidades relevantes para la implementación de un contrato. Para eso, es importante conocer la esctructura de archivos del mismo, junto con la responsibilidad de algunos de ellos.
@@ -1195,6 +1196,134 @@ En la siguiente subsección, describiremos brevemente algunos de las entidades r
 \end{tikzpicture}
 \caption{Arbol de archivos en el repositorio del lenguaje Marlowe. Extraído de~\cite{marlowe-language-repo}}\label{fig:Marlowe_dirtree}
 \end{figure}
+
+Para comenzar, podemos observar los cuatro directorios principales: \texttt{Domain}, \texttt{Generator}, \texttt{Model} y \texttt{Utility}. En los mismos es posible encontrar el codigo necesario para modelar los contratos ACTUS, generar contratos el código de los mismos en Marlowe o en Haskell para luego ser ejecutados.
+
+\subsubsection{Domain}
+
+El mismo está conformado por los archivos que modelan el dominio de los contratos ACTUS.
+
+\begin{tikzpicture}%
+	\draw[color=black!60!white]
+        \FTdir(\FTroot,Domain,Domain){
+            \FTfile(Domain,BusinessEvents.hs)
+            \FTfile(Domain,ContractState.hs)
+            \FTfile(Domain,ContractTerms.hs)
+            \FTfile(Domain,Ops.hs)
+            \FTfile(Domain,Schedule.hs)
+        };
+\end{tikzpicture}
+
+A lo largo de los mismos, se puden ver definiciones de tipos necesarios en ACTUS. Como por ejemplo: `EventType' o `RiskFactorsPoly' en \texttt{BusinessEvents.hs} o `ContractStatePoly' en \texttt{ContractState.hs}.
+
+A continuación vemos algunos fragmentos de algunas definiciones de tipos:
+
+\begin{lstlisting}[style=Haskell-cardano, caption=Tipos de eventos]
+{-| ACTUS event types
+    https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-event.json
+-}
+data EventType =
+      IED  -- ^ Initial Exchange
+    | FP   -- ^ Fee Payment
+    | PR   -- ^ Principal Redemption
+    | PD   -- ^ Principal Drawing
+    | PY   -- ^ Penalty Payment
+    | PP   -- ^ Principal Prepayment (unscheduled event)
+    | IP   -- ^ Interest Payment
+    | IPFX -- ^ Interest Payment Fixed Leg
+    | IPFL -- ^ Interest Payment Floating Leg
+    | IPCI -- ^ Interest Capitalization
+    | CE   -- ^ Credit Event
+
+    [...]
+
+    | MD   -- ^ Maturity
+    | XD   -- ^ Exercise
+    | STD  -- ^ Settlement
+    | PI   -- ^ Principal Increase
+    | AD   -- ^ Monitoring
+\end{lstlisting}
+
+\begin{lstlisting}[style=Haskell-cardano, caption=Contract state poly]
+
+{-| ACTUS contract states are defined in
+    https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-states.json
+-}
+data ContractStatePoly a = ContractStatePoly
+  {
+    tmd   :: Maybe LocalTime -- ^ Maturity Date (MD): The timestamp as per which the contract matures according to the initial terms or as per unscheduled events
+  , nt    :: a               -- ^ Notional Principal (NT): The outstanding nominal value
+  , ipnr  :: a               -- ^ Nominal Interest Rate (IPNR) : The applicable nominal rate
+  , ipac  :: a               -- ^ Accrued Interest (IPAC): The current value of accrued interest
+  , ipac1 :: Maybe a         -- ^ Accrued Interest (IPAC1): The current value of accrued interest of the first leg
+  , ipac2 :: Maybe a         -- ^ Accrued Interest (IPAC2): The current value of accrued interest of the second leg
+  , ipla  :: Maybe a         -- ^ Last Interst Period
+  , feac  :: a               -- ^ Fee Accrued (FEAC): The current value of accrued fees
+  , nsc   :: a               -- ^ Notional Scaling Multiplier (SCNT): The multiplier being applied to principal cash flows
+  , isc   :: a               -- ^ InterestScalingMultiplier (SCIP): The multiplier being applied to interest cash flows
+  , prf   :: PRF             -- ^ Contract Performance (PRF)
+  , sd    :: LocalTime       -- ^ Status Date (MD): The timestamp as per which the state is captured at any point in time
+  , prnxt :: a               -- ^ Next Principal Redemption Payment (PRNXT): The value at which principal is being repaid
+  , ipcb  :: a               -- ^ Interest Calculation Base (IPCB)
+  , xd    :: Maybe LocalTime -- ^ Exercise Date (XD)
+  , xa    :: Maybe a         -- ^ Exercise Amount (XA)
+  }
+\end{lstlisting}
+
+
+También es posible ver tipos relacionados a características de un contrato, como `ContractType', `ContractRole', `DayCountConvention', `BusinessDayConvention', etc en \texttt{ContractTerms.hs}.
+
+A continuación vemos algunos fragmentos de algunas definiciones de los mismos:
+
+\begin{lstlisting}[style=Haskell-cardano, caption=Tipos de contrato]
+-- |ContractType
+data CT = PAM   -- ^ Principal at maturity
+        | LAM   -- ^ Linear amortizer
+        | NAM   -- ^ Negative amortizer
+        | ANN   -- ^ Annuity
+        | STK   -- ^ Stock
+        | OPTNS -- ^ Option
+        | FUTUR -- ^ Future
+        | COM   -- ^ Commodity
+        | CSH   -- ^ Cash
+        | CLM   -- ^ Call Money
+        | SWPPV -- ^ Plain Vanilla Swap
+        | CEG   -- ^ Guarantee
+        | CEC   -- ^ Collateral
+\end{lstlisting}
+
+\begin{lstlisting}[style=Haskell-cardano, caption=Tipos de roles de contrato]
+-- |ContractRole
+data CR = CR_RPA -- ^ Real position asset
+        | CR_RPL -- ^ Real position liability
+        | CR_CLO -- ^ Role of a collateral
+        | CR_CNO -- ^ Role of a close-out-netting
+        | CR_COL -- ^ Role of an underlying to a collateral
+        | CR_LG  -- ^ Long position
+        | CR_ST  -- ^ Short position
+        | CR_BUY -- ^ Protection buyer
+        | CR_SEL -- ^ Protection seller
+
+        [...]
+\end{lstlisting}
+
+
+\begin{lstlisting}[style=Haskell-cardano, caption=Tipos de convención sobre días laborables]
+-- |BusinessDayConvention
+data BDC = BDC_NULL -- ^ No shift
+         | BDC_SCF  -- ^ Shift/calculate following
+         | BDC_SCMF -- ^ Shift/calculate modified following
+         | BDC_CSF  -- ^ Calculate/shift following
+         | BDC_CSMF -- ^ Calculate/shift modified following
+         | BDC_SCP  -- ^ Shift/calculate preceding
+         | BDC_SCMP -- ^ Shift/calculate modified preceding
+         | BDC_CSP  -- ^ Calculate/shift preceding
+         | BDC_CSMP -- ^ Calculate/shift modified preceding
+\end{lstlisting}
+
+\subsubsection{Generator}
+\subsubsection{Model}
+\subsubsection{Utility}
 
 % Contrato COM
 \subsection{Contrato COM (Commodity)}
