Corrijo caption en los listings parciales

--- a/main.tex
+++ b/main.tex
@@ -1218,7 +1218,7 @@ A lo largo de los mismos, se puden ver definiciones de tipos necesarios en ACTUS
 
 A continuación vemos algunos fragmentos de algunas definiciones de tipos:
 
-\begin{lstlisting}[style=Haskell-cardano, caption=Tipos de eventos]
+\begin{lstlisting}[style=Haskell-cardano, caption=Algunos tipos de eventos]
 {-| ACTUS event types
     https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-event.json
 -}
@@ -1292,7 +1292,7 @@ data CT = PAM   -- ^ Principal at maturity
         | CEC   -- ^ Collateral
 \end{lstlisting}
 
-\begin{lstlisting}[style=Haskell-cardano, caption=Tipos de roles de contrato]
+\begin{lstlisting}[style=Haskell-cardano, caption=Algunos tipos de roles de contrato]
 -- |ContractRole
 data CR = CR_RPA -- ^ Real position asset
         | CR_RPL -- ^ Real position liability
@@ -1321,7 +1321,11 @@ data BDC = BDC_NULL -- ^ No shift
          | BDC_CSMP -- ^ Calculate/shift modified preceding
 \end{lstlisting}
 
+
 \subsubsection{Generator}
+
+
+
 \subsubsection{Model}
 \subsubsection{Utility}
 
